fix update technician + fix update admin

--- a/FE/src/app/admin/about-technician/about-technician.component.html
+++ b/FE/src/app/admin/about-technician/about-technician.component.html
@@ -7,7 +7,7 @@
                 <ul class="header-buttons-left ml-0">
                   <li class="dropdown m-l-20">
                     <label for="search-input"><i class="material-icons search-icon">search</i></label>
-                    <input  placeholder="Search" autocomplete="off" type="text" (keyup)="applyFilter($event)" class="browser-default search-field"
+                    <input  placeholder="חיפוש" autocomplete="off" type="text" (keyup)="applyFilter($event)" class="browser-default search-field"
                       aria-label="Search box">
                   </li>
                   <li class="dropdown">
@@ -134,7 +134,6 @@
     <mat-progress-spinner color="primary" [diameter]="40" mode="indeterminate">
     </mat-progress-spinner>
   </div>
-  
   
   <mat-paginator [pageSizeOptions]="[ 5, 10, 50,100]" aria-label="בחר לף לפניות"></mat-paginator>
       </div>
