--- a/FE/src/app/admin/all-technician/all-technician.component.html
+++ b/FE/src/app/admin/all-technician/all-technician.component.html
@@ -7,7 +7,7 @@
                 <ul class="header-buttons-left ml-0">
                   <li class="dropdown m-l-20">
                     <label for="search-input"><i class="material-icons search-icon">search</i></label>
-                    <input  placeholder="Search" autocomplete="off" type="text" (keyup)="applyFilter($event)" class="browser-default search-field"
+                    <input  placeholder="חיפוש" autocomplete="off" type="text" (keyup)="applyFilter($event)" class="browser-default search-field"
                       aria-label="Search box">
                   </li>
                   <li class="dropdown">
