--- a/FE/src/app/layout/header/header.component.html
+++ b/FE/src/app/layout/header/header.component.html
@@ -5,8 +5,8 @@
         (click)="isNavbarCollapsed = !isNavbarCollapsed" aria-expanded="false"></a>
       <a href="#" onClick="return false;" class="bars" (click)="mobileMenuSidebarOpen($event,'overlay-open')"></a>
       <a class="navbar-brand" routerLink={{homePage}}>
-        <img src="assets/images/logo.png" alt="" />
-        <span class="logo-name">Smart</span>
+        <img src="assets/images/logo3.png" alt="" />
+        <span class="logo-name">קריאת שירות</span>
       </a>
     </div>
     <div class="collapse navbar-collapse" [ngbCollapse]="isNavbarCollapsed">
@@ -82,7 +82,7 @@
         </li>
         <li class="nav-item user_profile" ngbDropdown>
           <div class="chip dropdown-toggle" ngbDropdownToggle class="nav-notification-icons pt-0">
-            <img src={{userImg}}  class="user_img" width="32" height="32" alt="User">
+            <img src={{userImg}}  class="user_img" width="32" height="32" alt="משתמש">
             <span>{{user.userName}}</span>
           </div>
           <div ngbDropdownMenu class="notification-dropdown pullDown">
@@ -96,8 +96,8 @@
                       </a>
                     </li>
                     <li>
-                      <a href="#"  onClick="return false;">
-                        <app-feather-icons [icon]="'settings'" [class]="'user-menu-icons'"></app-feather-icons>Settings
+                      <a (click)="Settings()">
+                        <app-feather-icons [icon]="'settings'" [class]="'user-menu-icons'"></app-feather-icons>הגדרות
                       </a>
                     </li>
                     <li>
