--- a/FE/src/app/layout/sidebar/sidebar.component.html
+++ b/FE/src/app/layout/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
         <li class="sidebar-user-panel">
           <div class="user-panel">
             <div class=" image">
-              <img src={{userImg}} altclass="img-circle user-img-circle" alt="User Image" />
+              <img src={{userImg}} altclass="img-circle user-img-circle" alt="תמונה משתמש" />
             </div>
           </div>
           <div class="profile-usertitle">
