fix Technician actor (back to list )+ fix admin actor

--- a/FE/src/app/technician/answer-technician/answer-technician.component.html
+++ b/FE/src/app/technician/answer-technician/answer-technician.component.html
@@ -69,7 +69,7 @@
           </mat-form-field>
         </div> 
         <button mat-raised-button style="margin:10px;" [disabled]="ReqForm.invalid" color="primary" type="submit" (click)="Onsubmit()">שלח</button>
-        <button mat-raised-button color="warn">ביטול</button>
+        <button mat-raised-button color="warn" (click)="backToList()">ביטול</button>
 
       </form>
 
