Chnaged every thing to hebrow

--- a/FE/src/app/authentication/signup/signup.component.html
+++ b/FE/src/app/authentication/signup/signup.component.html
@@ -83,7 +83,7 @@
             <div>
               
                 <mat-icon (click)="fileInput.click()">add_a_photo</mat-icon>
-                <input #fileInput formControlName="userImage" type="button" [(ngModel)]="newCustomer.image" (click)="onFileInput()"  style="display:none;" />
+                <input #fileInput  type="button" [(ngModel)]="newCustomer.image" (click)="onFileInput()"  style="display:none;" />
             </div>
 
 
