--- a/FE/src/app/customer/customer-details/customer-details.component.html
+++ b/FE/src/app/customer/customer-details/customer-details.component.html
@@ -8,8 +8,8 @@
     <img mat-card-sm-image src={{customer.image}} appearance="fill"alt="Photo of a Shiba Inu">
   </mat-card-title-group>
   <mat-card-content>
-    <p>Address: {{customer.userAddress}}</p>
-    <p>Phone: {{customer.userPhone}}</p>
+    <p>כתובת מגורים: {{customer.userAddress}}</p>
+    <p>טלפון נייד:{{customer.userPhone}}</p>
   </mat-card-content>
   <mat-card-actions>
     <button mat-button (click)="updateProfile()"><mat-icon aria-label="Edit">edit
