--- a/FE/src/app/admin/all-technician/all-technician.component.html
+++ b/FE/src/app/admin/all-technician/all-technician.component.html
@@ -108,7 +108,13 @@
        
         <mat-icon>delete</mat-icon>
       </button> 
+      <button mat-icon-button class="btn btn-outline-success" 
+       (click)="ToGoogleChars(row)">
+       
+        <mat-icon>camera</mat-icon>
+      </button>
      </div>
+      
     </mat-cell>
   </ng-container>
                        <mat-header-row *matHeaderRowDef="displayedColumns">
