--- a/FE/src/app/customer/customer-requests/customer-requests.component.html
+++ b/FE/src/app/customer/customer-requests/customer-requests.component.html
@@ -39,7 +39,7 @@
            <ng-container matColumnDef="isComplete">
             <mat-header-cell *matHeaderCellDef mat-sort-header>סטטוס פניה
             </mat-header-cell>
-            <mat-cell *matCellDef="let row" >{{row.complete ? 'טופלה':'בטיפול'}}</mat-cell>
+            <mat-cell *matCellDef="let row" >{{row.attach ? isComplete(row):'בהמתנה'}}</mat-cell>
           </ng-container>
             <!-- id Column -->
             <ng-container matColumnDef="id">
