--- a/FE/src/app/technician/my-requests/my-requests.component.html
+++ b/FE/src/app/technician/my-requests/my-requests.component.html
@@ -110,7 +110,7 @@
             <mat-cell *matCellDef="let row">
              {{row.answerdate}}</mat-cell>
           </ng-container>
-                <!-- Answerdate Column -->
+                <!-- MessageFromCust Column -->
                 <ng-container matColumnDef="MessageFromCust">
                   <mat-header-cell *matHeaderCellDef mat-sort-header>הודעה מלקוח
                   </mat-header-cell>
