--- a/FE/src/app/technician/my-requests/my-requests.component.html
+++ b/FE/src/app/technician/my-requests/my-requests.component.html
@@ -115,7 +115,7 @@
                   <mat-header-cell *matHeaderCellDef mat-sort-header>הודעה מלקוח
                   </mat-header-cell>
                   <mat-cell *matCellDef="let row">
-                   {{row.technician.messageTech}}</mat-cell>
+                   {{row.messageTech}}</mat-cell>
                 </ng-container>
 
            <!-- actions -->
