fix the massage technician in all actors + fix update massage technician

--- a/FE/src/app/admin/about-technician/about-technician.component.html
+++ b/FE/src/app/admin/about-technician/about-technician.component.html
@@ -111,6 +111,14 @@
              {{row.id}}</mat-cell>
           </ng-container>
 
+          <!-- messageTech Column -->
+          <ng-container matColumnDef="messageTech">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>הודעה מלקוח
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row">
+             {{row.messageTech}}</mat-cell>
+          </ng-container>
+
            <!-- Answerdate Column -->
            <ng-container matColumnDef="Answerdate">
             <mat-header-cell *matHeaderCellDef mat-sort-header>תשובה מעבדה
