--- a/FE/src/app/admin/about-technician/about-technician.component.html
+++ b/FE/src/app/admin/about-technician/about-technician.component.html
@@ -95,13 +95,20 @@
             <mat-cell *matCellDef="let row">
              {{row.problemDescription}}</mat-cell>
           </ng-container>
-           <!-- date Column -->
-           <ng-container matColumnDef="date">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך
+           <!-- openDate Column -->
+           <ng-container matColumnDef="openDate">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך פתיחה
             </mat-header-cell>
             <mat-cell *matCellDef="let row">
              {{row.date}}</mat-cell>
           </ng-container>
+            <!-- closeDate Column -->
+            <ng-container matColumnDef="closeDate">
+              <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך סגירה
+              </mat-header-cell>
+              <mat-cell *matCellDef="let row">
+               {{row.date}}</mat-cell>
+            </ng-container>
 
           <!-- id Column -->
           <ng-container matColumnDef="id">
