--- a/FE/src/app/admin/all-requests/all-requests.component.html
+++ b/FE/src/app/admin/all-requests/all-requests.component.html
@@ -90,13 +90,20 @@
             <mat-cell *matCellDef="let row">
                {{row.repairType}}</mat-cell>
           </ng-container>
-           <!-- date Column -->
-           <ng-container matColumnDef="date">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך
+           <!-- openDate Column -->
+           <ng-container matColumnDef="openDate">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך פתיחה
             </mat-header-cell>
             <mat-cell *matCellDef="let row">
              {{row.date}}</mat-cell>
           </ng-container>
+            <!-- closeDate Column -->
+            <ng-container matColumnDef="closeDate">
+              <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך סגירה
+              </mat-header-cell>
+              <mat-cell *matCellDef="let row">
+               {{row.date}}</mat-cell>
+            </ng-container>
 
           <!-- deviceName Column -->
           <ng-container matColumnDef="deviceName">
@@ -115,7 +122,7 @@
        
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <br>
-       <button mat-icon-button color="warn" 
+       <button mat-icon-button color="warn" [disabled]="row.complete"
        (click)="deleteRequsetCustomer(row)">
        
         <mat-icon>delete</mat-icon>
