--- a/FE/src/app/customer/customer-requests/customer-requests.component.html
+++ b/FE/src/app/customer/customer-requests/customer-requests.component.html
@@ -48,13 +48,21 @@
                 <mat-cell *matCellDef="let row"> {{row.id}}
                 </mat-cell>
               </ng-container>
-                   <!-- date Column -->
-           <ng-container matColumnDef="date">
-            <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך
+                   <!-- openDate Column -->
+           <ng-container matColumnDef="openDate">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך פתיחה
             </mat-header-cell>
             <mat-cell *matCellDef="let row">
              {{row.date}}</mat-cell>
           </ng-container>
+
+                  <!-- closeDate Column -->
+                  <ng-container matColumnDef="closeDate">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך סגירה
+                    </mat-header-cell>
+                    <mat-cell *matCellDef="let row">
+                     {{row.closedate}}</mat-cell>
+                  </ng-container>
            <!-- deviceType Column -->
            <ng-container matColumnDef="deviceType">
             <mat-header-cell *matHeaderCellDef mat-sort-header>סוג מכשיר
