--- a/FE/src/app/admin/about-technician/about-technician.component.html
+++ b/FE/src/app/admin/about-technician/about-technician.component.html
@@ -1,4 +1,4 @@
-<app-screen-cont [title]="'פניות בטיפול תכנאי'" [breadscrums]="breadscrums" >
+<app-screen-cont [title]="'פניות בטיפול טכנאי'" [breadscrums]="breadscrums" >
 
     <div class="mat-elevation-z8">
         <div class="materialTableHeader">
