--- a/FE/src/app/admin/all-technician/all-technician.component.html
+++ b/FE/src/app/admin/all-technician/all-technician.component.html
@@ -1,4 +1,4 @@
-<app-screen-cont [title]="'הצג תכנאים'" [breadscrums]="breadscrums">
+<app-screen-cont [title]="'הצג טכנאים'" [breadscrums]="breadscrums">
 
 <div class="mat-elevation-z8">
         <div class="materialTableHeader">
@@ -12,7 +12,7 @@
                   </li>
                   <li class="dropdown">
                     <h2>
-                      <strong>כל התכנאים</strong></h2>
+                      <strong>כל הטכנאים</strong></h2>
                   </li>
                  
                 </ul>
