--- a/FE/src/app/admin/google-charms-to-technician/google-charms-to-technician.component.html
+++ b/FE/src/app/admin/google-charms-to-technician/google-charms-to-technician.component.html
@@ -1,5 +1,5 @@
 
-<app-screen-cont [title]="'אחוז בקשות לתכנאי'" [breadscrums]="breadscrums">
+<app-screen-cont [title]="'אחוז בקשות לטכנאי'" [breadscrums]="breadscrums">
 <div id="chart" style="max-width:380px; margin:35px auto; padding:0;">
     <apx-chart
       [series]="chartOptions.series"
