--- a/FE/src/app/admin/add-technician/add-technician.component.html
+++ b/FE/src/app/admin/add-technician/add-technician.component.html
@@ -1,4 +1,4 @@
-<app-screen-cont [title]="'הוספת תכנאי'" [breadscrums]="breadscrums" >
+<app-screen-cont [title]="'הוספת טכנאי'" [breadscrums]="breadscrums" >
     <form #formInfo="ngForm" class="form m-4"  [formGroup]="TechnicianForm">
           <div class="col-md-12 col-sm-12">
             <mat-form-field style="margin:10px; width:250px" appearance="fill">
