--- a/FE/src/app/admin/technicians-selector/technicians-selector.component.html
+++ b/FE/src/app/admin/technicians-selector/technicians-selector.component.html
@@ -1,5 +1,5 @@
 <mat-form-field style=" width:250px" appearance="fill">
-    <mat-label>בחר תכנאי</mat-label>            
+    <mat-label>בחר טכנאי</mat-label>            
         <mat-select [(ngModel)]="selectedTechnician" (selectionChange)="selectTechnician()"  placeholder="Technician Name">
             <mat-option *ngFor="let technician of technicians" [value]="technician">{{technician.userName}}</mat-option>
             
