--- a/FE/src/app/customer/request-tech/request-tech.component.html
+++ b/FE/src/app/customer/request-tech/request-tech.component.html
@@ -1,4 +1,4 @@
-<app-screen-cont [title]="'בקשת תיקון ל'" [breadscrums]="breadscrums" >
+<app-screen-cont [title]="'בקשה חדשה'" [breadscrums]="breadscrums" >
 
         <form #formInfo="ngForm" class="form m-4"  [formGroup]="ReqForm">
           <div class="col-md-12 col-sm-12">
