--- a/FE/src/app/admin/about-technician/about-technician.component.html
+++ b/FE/src/app/admin/about-technician/about-technician.component.html
@@ -107,7 +107,7 @@
               <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך סגירה
               </mat-header-cell>
               <mat-cell *matCellDef="let row">
-               {{row.date}}</mat-cell>
+               {{row.closedate}}</mat-cell>
             </ng-container>
 
           <!-- id Column -->
