--- a/FE/src/app/admin/all-requests/all-requests.component.html
+++ b/FE/src/app/admin/all-requests/all-requests.component.html
@@ -9,7 +9,11 @@
         <mat-option value="הכל">הכל</mat-option>
     </mat-select>
 </mat-form-field>
-
+<button mat-icon-button class="btn btn-outline-success" style="width: 50px; height: 50px" 
+       (click)="ToGoogleChars()">
+       
+        <mat-icon>camera</mat-icon>
+      </button>
     <div class="mat-elevation-z8">
         <div class="materialTableHeader">
             <div class="row">
@@ -112,7 +116,7 @@
               <mat-header-cell *matHeaderCellDef mat-sort-header>תאריך סגירה
               </mat-header-cell>
               <mat-cell *matCellDef="let row">
-               {{row.date}}</mat-cell>
+               {{row.closedate}}</mat-cell>
             </ng-container>
 
           <!-- deviceName Column -->
