--- a/FE/src/app/technician/answer-technician/answer-technician.component.html
+++ b/FE/src/app/technician/answer-technician/answer-technician.component.html
@@ -48,7 +48,7 @@
             <mat-label>האם לסגור הפניה</mat-label>
             <mat-select [(ngModel)]="answerTechnician.complete" style="color:white;" [formControl]="ReqForm.get('isComplete')">
               <mat-option value="true">כן</mat-option>
-              <mat-option value="false">לה</mat-option>
+              <mat-option value="false">לא</mat-option>
             </mat-select>
           </mat-form-field>
         </div> 
