--- a/FE/src/app/technician/my-requests/my-requests.component.html
+++ b/FE/src/app/technician/my-requests/my-requests.component.html
@@ -126,7 +126,7 @@
        
       <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <br>
-       <button mat-icon-button color="warn" 
+       <button mat-icon-button color="warn" [disabled]="row.complete" 
        (click)="AnswerTechnician(row)">
        
         <mat-icon>build</mat-icon>
