--- a/FE/src/app/authentication/signin/signin.component.html
+++ b/FE/src/app/authentication/signin/signin.component.html
@@ -17,7 +17,7 @@
             <div class="row">
               <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2">
                 <mat-form-field class="example-full-width" appearance="outline">
-                  <mat-label>שם משתמש</mat-label>
+                  <mat-label>דואר אךקטרוני</mat-label>
                   <input matInput formControlName="username" [(ngModel)]="loginUser.email"/>
                   <mat-icon matSuffix>face</mat-icon>
                   <mat-error *ngIf="authForm.get('username').hasError('required')">
