--- a/FE/src/app/admin/update-admin/update-admin.component.html
+++ b/FE/src/app/admin/update-admin/update-admin.component.html
@@ -58,7 +58,7 @@
 
       <div class="row">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2" style="margin:10px ;margin-left: 1800px;">
-          <button class="btn-space" (click)="UpdateAdmin()" [disabled]="AdminForm.invalid" mat-raised-button
+          <button class="btn-space" (click)="UpdateAdmin()" mat-raised-button
             color="primary">עדכון</button>
             <button class="btn-space" (click)="backToList()"  mat-raised-button
             color="warn">ביטול</button>
