--- a/FE/src/app/customer/update-customer-details/update-customer-details.component.html
+++ b/FE/src/app/customer/update-customer-details/update-customer-details.component.html
@@ -28,6 +28,12 @@
 
         </div>
         <div class="col-md-12 col-sm-12" >
+          <mat-form-field style="margin:10px; width:250px" appearance="fill">
+            <mat-label>סיסמה</mat-label>
+            <input matInput [type]="hide ? 'password' : 'text'" [(ngModel)]="updateCustomer.userPassword" [formControl]="custForm.get('password')"   required>
+            <mat-icon matSuffix (click)="hide = !hide">
+              {{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+          </mat-form-field>
           
 
           <mat-icon (click)="fileInput.click()">add_a_photo</mat-icon>
@@ -45,7 +51,7 @@
 
       <div class="row">
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-2" style="margin:10px ;margin-left: 1800px;">
-          <button class="btn-space" (click)="SubmitupdateCustomer()" [disabled]="custForm.invalid" mat-raised-button
+          <button class="btn-space" (click)="SubmitupdateCustomer()" mat-raised-button
             color="primary">עדכון</button>
             <button class="btn-space" (click)="backToList()"  mat-raised-button
             color="warn">ביטול</button>
